// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-html > should allow to configure html.tags 1`] = `
{
  "entry": {
    "foo": [
      "./src/foo.ts",
    ],
    "main": [
      "./src/main.ts",
    ],
  },
  "plugins": [
    {
      "name": "RsbuildCorePlugin",
    },
    HtmlRspackPlugin {
      "options": {
        "base": false,
        "cache": true,
        "chunks": [
          "main",
        ],
        "chunksSortMode": "auto",
        "compile": true,
        "entryName": "main",
        "excludeChunks": [],
        "favicon": false,
        "filename": "main.html",
        "hash": false,
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "publicPath": "auto",
        "scriptLoading": "defer",
        "showErrors": true,
        "template": "",
        "templateContent": "<!doctype html><html><head></head><body><div id=\\"root\\"></div></body></html>",
        "templateParameters": [Function],
        "title": "Rsbuild App",
        "xhtml": false,
      },
      "version": 6,
    },
    HtmlRspackPlugin {
      "options": {
        "base": false,
        "cache": true,
        "chunks": [
          "foo",
        ],
        "chunksSortMode": "auto",
        "compile": true,
        "entryName": "foo",
        "excludeChunks": [],
        "favicon": false,
        "filename": "foo.html",
        "hash": false,
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "publicPath": "auto",
        "scriptLoading": "defer",
        "showErrors": true,
        "template": "",
        "templateContent": "<!doctype html><html><head></head><body><div id=\\"root\\"></div></body></html>",
        "templateParameters": [Function],
        "title": "Rsbuild App",
        "xhtml": false,
      },
      "version": 6,
    },
    RsbuildHtmlPlugin {
      "getContext": [Function],
      "getEnvironment": [Function],
      "name": "RsbuildHtmlPlugin",
      "options": {
        "foo": {
          "tagConfig": {
            "append": true,
            "hash": false,
            "publicPath": true,
            "tags": [
              {
                "attrs": {
                  "src": "jq.js",
                },
                "tag": "script",
              },
            ],
          },
          "templateContent": "<!doctype html><html><head></head><body><div id=\\"root\\"></div></body></html>",
        },
        "main": {
          "tagConfig": {
            "append": true,
            "hash": false,
            "publicPath": true,
            "tags": [
              {
                "attrs": {
                  "src": "jq.js",
                },
                "tag": "script",
              },
            ],
          },
          "templateContent": "<!doctype html><html><head></head><body><div id=\\"root\\"></div></body></html>",
        },
      },
    },
  ],
}
`;

exports[`plugin-html > should allow to modify plugin options by tools.htmlPlugin 1`] = `
{
  "entry": {
    "index": [
      "./src/index.js",
    ],
  },
  "plugins": [
    {
      "name": "RsbuildCorePlugin",
    },
    HtmlRspackPlugin {
      "options": {
        "base": false,
        "cache": true,
        "chunks": "all",
        "chunksSortMode": "auto",
        "compile": true,
        "excludeChunks": [],
        "favicon": false,
        "filename": "index.html",
        "hash": false,
        "inject": true,
        "meta": {},
        "publicPath": "auto",
        "scriptLoading": "defer",
        "showErrors": true,
        "template": "auto",
        "templateContent": false,
        "templateParameters": [Function],
        "title": "Rspack App",
        "xhtml": false,
      },
      "version": 6,
    },
    RsbuildHtmlPlugin {
      "getContext": [Function],
      "getEnvironment": [Function],
      "name": "RsbuildHtmlPlugin",
      "options": {
        "index": {
          "templateContent": "<!doctype html><html><head></head><body><div id=\\"root\\"></div></body></html>",
        },
      },
    },
  ],
}
`;

exports[`plugin-html > should allow to set favicon by html.favicon option 1`] = `
{
  "entry": {
    "index": [
      "./src/index.js",
    ],
  },
  "plugins": [
    {
      "name": "RsbuildCorePlugin",
    },
    HtmlRspackPlugin {
      "options": {
        "base": false,
        "cache": true,
        "chunks": [
          "index",
        ],
        "chunksSortMode": "auto",
        "compile": true,
        "entryName": "index",
        "excludeChunks": [],
        "favicon": false,
        "filename": "index.html",
        "hash": false,
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "publicPath": "auto",
        "scriptLoading": "defer",
        "showErrors": true,
        "template": "",
        "templateContent": "<!doctype html><html><head></head><body><div id=\\"root\\"></div></body></html>",
        "templateParameters": [Function],
        "title": "Rsbuild App",
        "xhtml": false,
      },
      "version": 6,
    },
    RsbuildHtmlPlugin {
      "getContext": [Function],
      "getEnvironment": [Function],
      "name": "RsbuildHtmlPlugin",
      "options": {
        "index": {
          "favicon": "./src/favicon.ico",
          "templateContent": "<!doctype html><html><head></head><body><div id=\\"root\\"></div></body></html>",
        },
      },
    },
  ],
}
`;

exports[`plugin-html > should allow to set inject by html.inject option 1`] = `
{
  "entry": {
    "index": [
      "./src/index.js",
    ],
  },
  "plugins": [
    {
      "name": "RsbuildCorePlugin",
    },
    HtmlRspackPlugin {
      "options": {
        "base": false,
        "cache": true,
        "chunks": [
          "index",
        ],
        "chunksSortMode": "auto",
        "compile": true,
        "entryName": "index",
        "excludeChunks": [],
        "favicon": false,
        "filename": "index.html",
        "hash": false,
        "inject": "body",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "publicPath": "auto",
        "scriptLoading": "defer",
        "showErrors": true,
        "template": "",
        "templateContent": "<!doctype html><html><head></head><body><div id=\\"root\\"></div></body></html>",
        "templateParameters": [Function],
        "title": "Rsbuild App",
        "xhtml": false,
      },
      "version": 6,
    },
    RsbuildHtmlPlugin {
      "getContext": [Function],
      "getEnvironment": [Function],
      "name": "RsbuildHtmlPlugin",
      "options": {
        "index": {
          "templateContent": "<!doctype html><html><head></head><body><div id=\\"root\\"></div></body></html>",
        },
      },
    },
  ],
}
`;

exports[`plugin-html > should enable minify in production 1`] = `
{
  "entry": {
    "index": [
      "./src/index.js",
    ],
  },
  "plugins": [
    {
      "name": "RsbuildCorePlugin",
    },
    HtmlRspackPlugin {
      "options": {
        "base": false,
        "cache": true,
        "chunks": [
          "index",
        ],
        "chunksSortMode": "auto",
        "compile": true,
        "entryName": "index",
        "excludeChunks": [],
        "favicon": false,
        "filename": "index.html",
        "hash": false,
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "publicPath": "auto",
        "scriptLoading": "defer",
        "showErrors": true,
        "template": "",
        "templateContent": "<!doctype html><html><head></head><body><div id=\\"root\\"></div></body></html>",
        "templateParameters": [Function],
        "title": "Rsbuild App",
        "xhtml": false,
      },
      "version": 6,
    },
    RsbuildHtmlPlugin {
      "getContext": [Function],
      "getEnvironment": [Function],
      "name": "RsbuildHtmlPlugin",
      "options": {
        "index": {
          "templateContent": "<!doctype html><html><head></head><body><div id=\\"root\\"></div></body></html>",
        },
      },
    },
  ],
}
`;

exports[`plugin-html > should register html plugin correctly 1`] = `
{
  "entry": {
    "index": [
      "./src/index.js",
    ],
  },
  "plugins": [
    {
      "name": "RsbuildCorePlugin",
    },
    HtmlRspackPlugin {
      "options": {
        "base": false,
        "cache": true,
        "chunks": [
          "index",
        ],
        "chunksSortMode": "auto",
        "compile": true,
        "entryName": "index",
        "excludeChunks": [],
        "favicon": false,
        "filename": "index.html",
        "hash": false,
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "publicPath": "auto",
        "scriptLoading": "defer",
        "showErrors": true,
        "template": "",
        "templateContent": "<!doctype html><html><head></head><body><div id=\\"root\\"></div></body></html>",
        "templateParameters": [Function],
        "title": "Rsbuild App",
        "xhtml": false,
      },
      "version": 6,
    },
    RsbuildHtmlPlugin {
      "getContext": [Function],
      "getEnvironment": [Function],
      "name": "RsbuildHtmlPlugin",
      "options": {
        "index": {
          "templateContent": "<!doctype html><html><head></head><body><div id=\\"root\\"></div></body></html>",
        },
      },
    },
  ],
}
`;

exports[`plugin-html > should stop injecting <script> if inject is '() => false' 1`] = `
{
  "entry": {
    "index": [
      "./src/index.js",
    ],
  },
  "plugins": [
    {
      "name": "RsbuildCorePlugin",
    },
    HtmlRspackPlugin {
      "options": {
        "base": false,
        "cache": true,
        "chunks": [
          "index",
        ],
        "chunksSortMode": "auto",
        "compile": true,
        "entryName": "index",
        "excludeChunks": [],
        "favicon": false,
        "filename": "index.html",
        "hash": false,
        "inject": false,
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "publicPath": "auto",
        "scriptLoading": "defer",
        "showErrors": true,
        "template": "",
        "templateContent": "<!doctype html><html><head></head><body><div id=\\"root\\"></div></body></html>",
        "templateParameters": [Function],
        "title": "Rsbuild App",
        "xhtml": false,
      },
      "version": 6,
    },
    RsbuildHtmlPlugin {
      "getContext": [Function],
      "getEnvironment": [Function],
      "name": "RsbuildHtmlPlugin",
      "options": {
        "index": {
          "templateContent": "<!doctype html><html><head></head><body><div id=\\"root\\"></div></body></html>",
        },
      },
    },
  ],
}
`;

exports[`plugin-html > should stop injecting <script> if inject is 'false' 1`] = `
{
  "entry": {
    "index": [
      "./src/index.js",
    ],
  },
  "plugins": [
    {
      "name": "RsbuildCorePlugin",
    },
    HtmlRspackPlugin {
      "options": {
        "base": false,
        "cache": true,
        "chunks": [
          "index",
        ],
        "chunksSortMode": "auto",
        "compile": true,
        "entryName": "index",
        "excludeChunks": [],
        "favicon": false,
        "filename": "index.html",
        "hash": false,
        "inject": false,
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "publicPath": "auto",
        "scriptLoading": "defer",
        "showErrors": true,
        "template": "",
        "templateContent": "<!doctype html><html><head></head><body><div id=\\"root\\"></div></body></html>",
        "templateParameters": [Function],
        "title": "Rsbuild App",
        "xhtml": false,
      },
      "version": 6,
    },
    RsbuildHtmlPlugin {
      "getContext": [Function],
      "getEnvironment": [Function],
      "name": "RsbuildHtmlPlugin",
      "options": {
        "index": {
          "templateContent": "<!doctype html><html><head></head><body><div id=\\"root\\"></div></body></html>",
        },
      },
    },
  ],
}
`;

exports[`plugin-html > should support environment html config 1`] = `
[
  {
    "entry": {
      "main": [
        "./src/main.ts",
      ],
    },
    "plugins": [
      {
        "name": "RsbuildCorePlugin",
      },
      HtmlRspackPlugin {
        "options": {
          "base": false,
          "cache": true,
          "chunks": [
            "main",
          ],
          "chunksSortMode": "auto",
          "compile": true,
          "entryName": "main",
          "excludeChunks": [],
          "favicon": false,
          "filename": "web/main.html",
          "hash": false,
          "inject": "head",
          "meta": {
            "charset": {
              "charset": "UTF-8",
            },
            "viewport": "width=device-width, initial-scale=1.0",
          },
          "publicPath": "auto",
          "scriptLoading": "defer",
          "showErrors": true,
          "template": "",
          "templateContent": "<!doctype html><html><head></head><body><div id=\\"app\\"></div></body></html>",
          "templateParameters": [Function],
          "title": "web",
          "xhtml": false,
        },
        "version": 6,
      },
      RsbuildHtmlPlugin {
        "getContext": [Function],
        "getEnvironment": [Function],
        "name": "RsbuildHtmlPlugin",
        "options": {
          "main": {
            "templateContent": "<!doctype html><html><head></head><body><div id=\\"app\\"></div></body></html>",
          },
        },
      },
    ],
  },
  {
    "entry": {
      "index": [
        "./src/main1.ts",
      ],
    },
    "plugins": [
      {
        "name": "RsbuildCorePlugin",
      },
      HtmlRspackPlugin {
        "options": {
          "base": false,
          "cache": true,
          "chunks": [
            "index",
          ],
          "chunksSortMode": "auto",
          "compile": true,
          "entryName": "index",
          "excludeChunks": [],
          "favicon": false,
          "filename": "index.html",
          "hash": false,
          "inject": "head",
          "meta": {
            "charset": {
              "charset": "UTF-8",
            },
            "viewport": "width=device-width, initial-scale=1.0",
          },
          "publicPath": "auto",
          "scriptLoading": "defer",
          "showErrors": true,
          "template": "",
          "templateContent": "<!doctype html><html><head></head><body><div id=\\"app1\\"></div></body></html>",
          "templateParameters": [Function],
          "title": "web1",
          "xhtml": false,
        },
        "version": 6,
      },
      RsbuildHtmlPlugin {
        "getContext": [Function],
        "getEnvironment": [Function],
        "name": "RsbuildHtmlPlugin",
        "options": {
          "index": {
            "templateContent": "<!doctype html><html><head></head><body><div id=\\"app1\\"></div></body></html>",
          },
        },
      },
    ],
  },
]
`;

exports[`plugin-html > should support multi entry 1`] = `
{
  "entry": {
    "foo": [
      "./src/foo.ts",
    ],
    "main": [
      "./src/main.ts",
    ],
  },
  "plugins": [
    {
      "name": "RsbuildCorePlugin",
    },
    HtmlRspackPlugin {
      "options": {
        "base": false,
        "cache": true,
        "chunks": [
          "main",
        ],
        "chunksSortMode": "auto",
        "compile": true,
        "entryName": "main",
        "excludeChunks": [],
        "favicon": false,
        "filename": "main.html",
        "hash": false,
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "publicPath": "auto",
        "scriptLoading": "defer",
        "showErrors": true,
        "template": "",
        "templateContent": "<!doctype html><html><head></head><body><div id=\\"root\\"></div></body></html>",
        "templateParameters": [Function],
        "title": "Rsbuild App",
        "xhtml": false,
      },
      "version": 6,
    },
    HtmlRspackPlugin {
      "options": {
        "base": false,
        "cache": true,
        "chunks": [
          "foo",
        ],
        "chunksSortMode": "auto",
        "compile": true,
        "entryName": "foo",
        "excludeChunks": [],
        "favicon": false,
        "filename": "foo.html",
        "hash": false,
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "publicPath": "auto",
        "scriptLoading": "defer",
        "showErrors": true,
        "template": "",
        "templateContent": "<!doctype html><html><head></head><body><div id=\\"root\\"></div></body></html>",
        "templateParameters": [Function],
        "title": "Rsbuild App",
        "xhtml": false,
      },
      "version": 6,
    },
    RsbuildHtmlPlugin {
      "getContext": [Function],
      "getEnvironment": [Function],
      "name": "RsbuildHtmlPlugin",
      "options": {
        "foo": {
          "templateContent": "<!doctype html><html><head></head><body><div id=\\"root\\"></div></body></html>",
        },
        "main": {
          "templateContent": "<!doctype html><html><head></head><body><div id=\\"root\\"></div></body></html>",
        },
      },
    },
  ],
}
`;
